# Gorgona

./: .gitignore  CMakeLists.txt  Gorgona.bmarks  Gorgona.cbp  Gorgona.depend  Gorgona.layout  Gorgona_build_log.html  README.md  README_CS.TXT  README_CS.md  Readme_cs.txt  build.sh  version.h
data/gorgona/libs/: linux.lua
data/gorgona/modules/: Dosbox.lua  Q4Wine.lua
docs/: AUTHORS.md  CHANGES_CZ.TXT  COPYING.md  INSTALL_CS.md  LuaApi_CS.md  NEWS_CS.md  README_CS.TXT  STATUS.md  STATUS_CS.md
include/: Boxes.h  FSM_Changes.h  FXGameItem.h  FXGameLauncher.h  FXLaunchEditor.h  FXLauncherLua.h  FXListPane.h  GO_Keywords.h  Gorgona.h  GorgonaWindow.h  IconsTheme.h  Library.h  LuaAPI.h  Utils.h  define.h
include/Echidna/: FSM_Changes.h  ItemBase.h  Keywords.h  ObjectList.h  Property.h  Signal.h  String_utils.h  XMLUtils.h
include/GorgonaProcess/: Process.h  Runnable.h
include/Perseus/: Desktop.h  ProcSession.h  Process.h  Runnable.h  TermProfile.h
integration/: Gorgona.desktop  icons.map
libs/: extstring.lua
modules/: Console.lua  Doom.lua  Dosbox.lua  ModManager.lua  Morfeus.lua  Q4Wine.lua  legendary.lua  steam.lua  template.lua
scripts/: ModManager.lua
scripts/libs/: linux.lua
scripts/modules/: Doom.lua  Morfeus.lua  Q4Wine.lua  legendary.lua  steam.lua
src/: Boxes.cpp  FSM_Changes.cpp  FXGameItem.cpp  FXGameLauncher.cpp  FXLaunchEditor.cpp  FXListPane.cpp  GO_Keywords.cpp  Gorgona.cpp  GorgonaWindow.cpp  IconsTheme.cpp  Library.cpp  LuaAPI.cpp  Process.cpp  Runnable.cpp  Utils.cpp  main.cpp
src/Echidna/: FSM_Changes.cpp  ItemBase.cpp  Keywords.cpp  Property.cpp  Signal.cpp  String_utils.cpp
src/Perseus/: Desktop.cpp  ProcSession.cpp  Process.cpp  Runnable.cpp  TermProfile.cpp
utils/: grpchecker.sh  init.lua
